@@ -73,6 +73,7 @@ v4.2.13 (work-in-progress)
      * More consistent and useful serialisation of MiniMC source and geometry
        objects.
      * Add NC::safe_str2uint and NC::StrView::toUint64.
+     * Add warning messages to users of obsolete C API functions.
      * ...
 
 v4.2.12 2026-01-05
